src/objects/ACCOUNT_ACCOUNT_RELATION__c.object
<CustomObject>
    <description>BST - Custom object to store M:M relations between Accounts (Customer and Competitors for wave 1). Most of the data provided by IMS, some data can be Baxter Specific.</description>
    <fields>
        <fullName>BST_BAXTER_ONLY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to check if the record needs to be synced with IMS or not.</description>
        <label>Baxter Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_CLD_ACCT_NAME__c</fullName>
        <description>Internal field for Audit purpose. Captures the name of the Child Account. The field name is short because of the limit in custom metadata.</description>
        <formula>DP_CHILD_ACCOUNT_ID__r.Name</formula>
        <label>Child Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_CLD_IMS_ACCT_ID__c</fullName>
        <description>Internal fields for Audit purpose.Captures IMS ID of Child Account. The field name is short because of the limit in custom metadata.</description>
        <formula>IF(DP_CHILD_ACCOUNT_ID__r.DP_ID__c &lt;&gt; null , DP_CHILD_ACCOUNT_ID__r.DP_ID__c , &apos;&apos;)</formula>
        <label>Child IMS Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_COUNTRY__c</fullName>
        <description>Field to track the country.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Andorra</fullName>
                    <isActive>false</isActive>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Dom Com</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                    <isActive>false</isActive>
                    <label>Global</label>
                </value>
                <value>
                    <fullName>Luxembourg</fullName>
                    <isActive>false</isActive>
                    <label>Luxembourg</label>
                </value>
                <value>
                    <fullName>Monaco</fullName>
                    <isActive>false</isActive>
                    <label>Monaco</label>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_EXTERNAL_ID__c</fullName>
        <description>This Id will be used to integrate with IMS data and this will be the concatenation of Account and Account Salesforce Ids</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_HAS_BAXTER_ONLY_RECORD__c</fullName>
        <description>BST - Field to check if any of the related records have Baxter Only Field checked</description>
        <formula>IF( 
OR ((DP_PARENT_ACCOUNT_ID__r.BST_BAXTER_ONLY__c), (DP_CHILD_ACCOUNT_ID__r.BST_BAXTER_ONLY__c)), 
true, 
false 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Baxter Only Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_IMS_PROCESS_FLAG__c</fullName>
        <description>Field to check if both Parent Account and Child Account in the association has IMS Flag checked, so they can be processed for IMS Processing upon creation/modification
Old Formula: IF(
	AND (DP_PARENT_ACCOUNT_ID__r.DP_ID__c != null, DP_CHILD_ACCOUNT_ID__r.DP_ID__c != null),
	true,
	false
)</description>
        <formula>IF( 
AND (CONTAINS(DP_PARENT_ACCOUNT_ID__r.RecordType.DeveloperName, &apos;IMS&apos;), CONTAINS( DP_CHILD_ACCOUNT_ID__r.RecordType.DeveloperName , &apos;IMS&apos;)), 
true, 
false 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMS Process Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_PARENT_ACCOUNT_NAME__c</fullName>
        <description>Internal field for Audit purpose. Captures the name of the Parent Account.</description>
        <formula>DP_PARENT_ACCOUNT_ID__r.Name</formula>
        <label>Parent Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_PARENT_IMS_ACCOUNT_ID__c</fullName>
        <description>Internal Field for Audit purpose. Field Created to Capture IMS ID of Parent Account</description>
        <formula>IF(DP_PARENT_ACCOUNT_ID__r.DP_ID__c  &lt;&gt; null ,  DP_PARENT_ACCOUNT_ID__r.DP_ID__c  , &apos;&apos;)</formula>
        <label>Parent IMS Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_ROLE__c</fullName>
        <description>Displays the role.</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accreditation Number</fullName>
                </value>
                <value>
                    <fullName>Bill To</fullName>
                    <isActive>false</isActive>
                    <label>Bill To</label>
                </value>
                <value>
                    <fullName>Buying Group</fullName>
                </value>
                <value>
                    <fullName>Care Of</fullName>
                    <isActive>false</isActive>
                    <label>Care Of</label>
                </value>
                <value>
                    <fullName>Competitor Connection</fullName>
                </value>
                <value>
                    <fullName>Home Dialysis Partner</fullName>
                </value>
                <value>
                    <fullName>Ship To</fullName>
                    <isActive>false</isActive>
                    <label>Ship To</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_Related_Account_P1__c</fullName>
        <defaultValue>1</defaultValue>
        <description>BST - This field is used for analytics</description>
        <label>Related Account P1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_STATUS__c</fullName>
        <description>For Marking the record with different status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Baxter Approved</fullName>
                    <isActive>false</isActive>
                    <label>Baxter Approved</label>
                </value>
                <value>
                    <fullName>Baxter Pending Review</fullName>
                </value>
                <value>
                    <fullName>Baxter Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <isActive>false</isActive>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>IMS Accepted</fullName>
                </value>
                <value>
                    <fullName>IMS Approved</fullName>
                    <isActive>false</isActive>
                    <label>IMS Approved</label>
                </value>
                <value>
                    <fullName>IMS Partially Accepted</fullName>
                </value>
                <value>
                    <fullName>IMS Pending Review</fullName>
                </value>
                <value>
                    <fullName>IMS Rejected</fullName>
                </value>
                <value>
                    <fullName>IMS Updated</fullName>
                    <isActive>false</isActive>
                    <label>IMS Updated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_Today__c</fullName>
        <formula>TODAY()</formula>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DP_CHILD_ACCOUNT_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores information about the child account associated with the current account.</description>
        <label>Child Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Accounts (Child Account)</relationshipLabel>
        <relationshipName>Related_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DP_END_DATE__c</fullName>
        <description>End Date of the relation.</description>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DP_ISACTIVE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to identify whether record is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DP_PARENT_ACCOUNT_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the Name of the Parent Account.</description>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Accounts</relationshipLabel>
        <relationshipName>Related_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DP_RELATION_TYPE__c</fullName>
        <description>Stores the information about the type of relation between accounts.</description>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Administrative Staff</fullName>
                </value>
                <value>
                    <fullName>A pour entrepôt</fullName>
                </value>
                <value>
                    <fullName>Belongs to cooperation</fullName>
                </value>
                <value>
                    <fullName>Belongs to Medical Health Network</fullName>
                </value>
                <value>
                    <fullName>CLIN - CCLIN</fullName>
                </value>
                <value>
                    <fullName>Coordinator</fullName>
                </value>
                <value>
                    <fullName>Doctor</fullName>
                </value>
                <value>
                    <fullName>est dans la communauté hospitalière de territoire de</fullName>
                </value>
                <value>
                    <fullName>Est dans le groupe hospitalier universitaire</fullName>
                </value>
                <value>
                    <fullName>Est dans le pole</fullName>
                </value>
                <value>
                    <fullName>Est en relation avec le groupement d&apos;achat</fullName>
                </value>
                <value>
                    <fullName>Est le secteur psychiatrique de</fullName>
                </value>
                <value>
                    <fullName>Est regroupé dans</fullName>
                </value>
                <value>
                    <fullName>Est sous tutelle</fullName>
                </value>
                <value>
                    <fullName>GPU</fullName>
                </value>
                <value>
                    <fullName>Has for Buying Group</fullName>
                </value>
                <value>
                    <fullName>Has for main workplace</fullName>
                </value>
                <value>
                    <fullName>Head of Dept</fullName>
                </value>
                <value>
                    <fullName>Hospital Doctor</fullName>
                </value>
                <value>
                    <fullName>Is affiliated to</fullName>
                </value>
                <value>
                    <fullName>Is contained within</fullName>
                </value>
                <value>
                    <fullName>Is coordinated by</fullName>
                </value>
                <value>
                    <fullName>Is duplicate of</fullName>
                </value>
                <value>
                    <fullName>Is grouped in</fullName>
                </value>
                <value>
                    <fullName>is grouped together</fullName>
                </value>
                <value>
                    <fullName>is in the Health Cooperation Group</fullName>
                    <isActive>false</isActive>
                    <label>is in the Health Cooperation Group</label>
                </value>
                <value>
                    <fullName>is in the Territory Hospital Community of</fullName>
                    <isActive>false</isActive>
                    <label>is in the Territory Hospital Community of</label>
                </value>
                <value>
                    <fullName>Is in the University Hospital Group</fullName>
                </value>
                <value>
                    <fullName>Is managed by</fullName>
                </value>
                <value>
                    <fullName>is part of a hub</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_START_DATE__c</fullName>
        <description>Start Date of the relation.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Related Account</label>
    <listViews>
        <fullName>All_Related_Accounts</fullName>
        <columns>NAME</columns>
        <columns>BST_COUNTRY__c</columns>
        <columns>DP_ISACTIVE__c</columns>
        <columns>DP_PARENT_ACCOUNT_ID__c</columns>
        <columns>DP_CHILD_ACCOUNT_ID__c</columns>
        <columns>DP_RELATION_TYPE__c</columns>
        <columns>BST_ROLE__c</columns>
        <columns>BST_STATUS__c</columns>
        <columns>DP_END_DATE__c</columns>
        <columns>BST_BAXTER_ONLY__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Related Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BST_All_Active_Related_Accounts</fullName>
        <columns>NAME</columns>
        <columns>BST_COUNTRY__c</columns>
        <columns>DP_ISACTIVE__c</columns>
        <columns>DP_PARENT_ACCOUNT_ID__c</columns>
        <columns>DP_CHILD_ACCOUNT_ID__c</columns>
        <columns>DP_RELATION_TYPE__c</columns>
        <columns>BST_ROLE__c</columns>
        <columns>BST_STATUS__c</columns>
        <columns>DP_END_DATE__c</columns>
        <columns>BST_BAXTER_ONLY__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DP_ISACTIVE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Related Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BST_All_Inactive_Related_Accounts</fullName>
        <columns>NAME</columns>
        <columns>BST_COUNTRY__c</columns>
        <columns>DP_ISACTIVE__c</columns>
        <columns>DP_PARENT_ACCOUNT_ID__c</columns>
        <columns>DP_CHILD_ACCOUNT_ID__c</columns>
        <columns>DP_RELATION_TYPE__c</columns>
        <columns>BST_ROLE__c</columns>
        <columns>BST_STATUS__c</columns>
        <columns>DP_END_DATE__c</columns>
        <columns>BST_BAXTER_ONLY__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DP_ISACTIVE__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Inactive Related Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>Baxter_BE_Admin</group>
            <group>Baxter_FR_Admin</group>
            <group>Baxter_NL_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BST_Deactivation_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>BST_COUNTRY__c</columns>
        <columns>DP_ISACTIVE__c</columns>
        <columns>DP_PARENT_ACCOUNT_ID__c</columns>
        <columns>DP_CHILD_ACCOUNT_ID__c</columns>
        <columns>DP_RELATION_TYPE__c</columns>
        <columns>BST_ROLE__c</columns>
        <columns>BST_STATUS__c</columns>
        <columns>DP_END_DATE__c</columns>
        <columns>BST_BAXTER_ONLY__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DP_ISACTIVE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>DP_END_DATE__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Deactivation In Progress</label>
        <language>en_US</language>
        <sharedTo>
            <group>Baxter_BE_Admin</group>
            <group>Baxter_FR_Admin</group>
            <group>Baxter_NL_Admin</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>BOOST Related Account ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>BST_End_Date_Less_Than_Today</fullName>
        <active>true</active>
        <description>End Date should be in past in case of record update.</description>
        <errorConditionFormula>AND(NOT(CONTAINS($Profile.Name, &quot;Integration Administrator&quot;)) , NOT(ISNEW()) , OR(DP_END_DATE__c &gt; TODAY(), ISNULL(DP_END_DATE__c)) , ISCHANGED( DP_END_DATE__c ))</errorConditionFormula>
        <errorDisplayField>DP_END_DATE__c</errorDisplayField>
        <errorMessage>End Date cannot be blank and should be in the past</errorMessage>
    </validationRules>
</CustomObject>